; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c__db_insert_block.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c__db_insert_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@insert_block_stmt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_db_insert_block(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* @insert_block_stmt, align 4
  %14 = call i32 @sqlite3_reset(i32 %13)
  %15 = load i32, i32* @insert_block_stmt, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @sqlite3_bind_int(i32 %15, i32 1, i32 %16)
  %18 = load i32, i32* @insert_block_stmt, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @sqlite3_bind_int(i32 %18, i32 2, i32 %19)
  %21 = load i32, i32* @insert_block_stmt, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @sqlite3_bind_int(i32 %21, i32 3, i32 %22)
  %24 = load i32, i32* @insert_block_stmt, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @sqlite3_bind_int(i32 %24, i32 4, i32 %25)
  %27 = load i32, i32* @insert_block_stmt, align 4
  %28 = load i32, i32* %11, align 4
  %29 = call i32 @sqlite3_bind_int(i32 %27, i32 5, i32 %28)
  %30 = load i32, i32* @insert_block_stmt, align 4
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @sqlite3_bind_int(i32 %30, i32 6, i32 %31)
  %33 = load i32, i32* @insert_block_stmt, align 4
  %34 = call i32 @sqlite3_step(i32 %33)
  ret void
}

declare dso_local i32 @sqlite3_reset(i32) #1

declare dso_local i32 @sqlite3_bind_int(i32, i32, i32) #1

declare dso_local i32 @sqlite3_step(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
